# STM32_Nixie

./: #auto_saved_files#  .gitignore  README.md  STM32_Nixie.kicad_prl  STM32_Nixie.kicad_pro  STM32_Nixie.kicad_sch  STM32_Nixie.kicad_sch-bak  TPH1110FNH_PSpice_20200803.lib  fp-lib-table  level_shifter.kicad_sch  mcu.kicad_sch  nixie.kicad_sch  power.kicad_sch  shift_registers.kicad_sch  sym-lib-table
firmware/: .clang-format  .clangd  .mxproject  .project  CMakeLists.txt  STM32F100C4TX_FLASH.ld  build.ninja  nixie_clock.ioc  stm32_nixie.ioc
firmware/Core/App/Inc/: debug.hh  hv5622_driver.hh  main_app.hh  menu.hh  nixie_display.hh  system_control.hh  time_lord.hh  time_utils.hh  user_input.hh
firmware/Core/App/Src/: debug.cpp  hv5622_driver.cpp  main_app.cpp  menu.cpp  nixie_display.cpp  system_control.cpp  time_lord.cpp  time_utils.cpp  user_input.cpp
firmware/Core/Inc/: hv5622_driver.h  hv5622_driver.hh  main.h  main_app.h  nixie_display.h  nixie_display.hh  stm32f1xx_hal_conf.h
firmware/Core/Src/: adc.c  gpio.c  hv5622_driver.cpp  main.c  main.cpp  main_app.cpp  nixie_display.cpp  rtc.c  spi.c  stm32f1xx_hal_msp.c  tim.c  usart.c
firmware/cmake/: gcc-arm-none-eabi.cmake
firmware/cmake/stm32cubemx/: CMakeLists.txt
pcb/: #auto_saved_files#  STM32_Nixie.kicad_dru  STM32_Nixie.kicad_pcb  STM32_Nixie.kicad_prl  STM32_Nixie.kicad_pro  STM32_Nixie.kicad_sch  fp-lib-table  level_shifter.kicad_sch  mcu.kicad_sch  mcu.kicad_sch-bak  nixie.kicad_sch  nixie_display.kicad_sch  power.kicad_sch  shift_registers.kicad_sch  shift_registers.kicad_sch-bak  usb_conn.kicad_sch  user_input.kicad_sch
pcb/outputs/: STM32_Nixie-top-pos_jlc.numbers  arjy-nix-v1-BOM.numbers  arjy-nix-v1-BOM_jlc.numbers
pcb/outputs/arjy-nix-v1-gerbers/: STM32_Nixie-B_Mask.gbs  STM32_Nixie-B_Paste.gbp  STM32_Nixie-B_Silkscreen.gbo  STM32_Nixie-Bot.gbl  STM32_Nixie-Edge_Cuts.gm1  STM32_Nixie-F_Mask.gts  STM32_Nixie-F_Paste.gtp  STM32_Nixie-F_Silkscreen.gto  STM32_Nixie-GND.g2  STM32_Nixie-NPTH-drl_map.gbr  STM32_Nixie-NPTH.drl  STM32_Nixie-PTH-drl_map.gbr  STM32_Nixie-PTH.drl  STM32_Nixie-PWR.g3  STM32_Nixie-Top.gtl
pcb/outputs/pcba files jlc/: Sample-BOM_JLCSMT.numbers
simulation/: TLV61046A_TRANS.asy  boost_TLV61046A.asc  boost_TLV61046A.op.raw  boost_TLV61046A.plt  switch.asc  switch.op.raw  switch.raw
simulation/12V_Boost_TLV61046A/: LSXND5050YKL220MMG.asy  boost_TLV61046A.asc
simulation/180V_Boost_LM5156/: 180V_boost_LM5156.asc  180V_boost_LM5156_Scratch.asc  LM5156-Q1_TRANS.asy  TPH1110FNH_G0_00_LTspice_rev1.lib
simulation/180V_Boost_LM5156/LM5156-Q1_PSPICE_AVG/: LM5156-Q1DSS_AVG.OLB  LM5156-Q1_AVG.libsig  LM5156-Q1_AVG.opj  LM5156-Q1_AVG_EVM.lib
simulation/180V_Boost_LM5156/LM5156-Q1_PSPICE_AVG/LM5156-Q1_AVG-PSpiceFiles/Bode_Plot/: AC.sim
simulation/180V_Boost_LM5156/LM5156-Q1_PSPICE_AVG/LM5156-Q1_AVG-PSpiceFiles/Bode_Plot/AC/: AC.mrk  AC.prb
simulation/180V_Boost_LM5156/LM5156-Q1_PSPICE_TRANS/: LM5156-Q1_TRANS.LIB  LM5156-Q1_TRANS.LIBsig  LM5156-Q1_TRANS.OLB  LM5156-Q1_TRANS.opj  LM5156-Q1_TRANS_EVM.LIB
simulation/180V_Boost_LM5156/LM5156-Q1_PSPICE_TRANS/LM5156-Q1_TRANS-PSpiceFiles/Flyback_Startup/: trans.sim
simulation/180V_Boost_LM5156/LM5156-Q1_PSPICE_TRANS/LM5156-Q1_TRANS-PSpiceFiles/Flyback_Startup/trans/: trans.mrk  trans.prb
simulation/180V_Boost_LM5156/LM5156-Q1_PSPICE_TRANS/LM5156-Q1_TRANS-PSpiceFiles/SEPIC_Startup/: trans.sim
simulation/180V_Boost_LM5156/LM5156-Q1_PSPICE_TRANS/LM5156-Q1_TRANS-PSpiceFiles/SEPIC_Startup/trans/: trans.mrk  trans.prb
simulation/180V_Boost_LM5156/LM5156-Q1_PSPICE_TRANS/LM5156-Q1_TRANS-PSpiceFiles/Startup/: trans.sim
simulation/180V_Boost_LM5156/LM5156-Q1_PSPICE_TRANS/LM5156-Q1_TRANS-PSpiceFiles/Startup/trans/: trans.mrk  trans.prb
simulation/180V_Boost_LM5156/LM5156-Q1_PSPICE_TRANS/LM5156-Q1_TRANS-PSpiceFiles/Steady_State/: trans.sim
simulation/180V_Boost_LM5156/LM5156-Q1_PSPICE_TRANS/LM5156-Q1_TRANS-PSpiceFiles/Steady_State/trans/: trans.mrk  trans.prb
simulation/180V_CP_mult_boost_TLV61046A/: LSXB_LSXN_LSXP.lib  LSXND5050YKL220MMG_LT.cir  TLV61046A_TRANS.asy  cp_mult_boost_TLV61046A.asc
simulation/180V_cp_mult_boost/: cp_mult_boost.asc  cp_mult_boost_TLV61046A.asc
simulation/Generic Boost/: 180V_DCM_Boost_ideal.asc  180V_DCM_boost_parasitics.asc  180V_DCM_boost_parasitics_snub.asc  180V_DCM_boost_parasitics_snub.plt
simulation/Reset Button/: Reset.asc  Reset_double_FET.asc  Reset_moonlander.asc
